--- a/package.json
+++ b/package.json
@@ -24,15 +24,24 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
+    "google-maps": "^3.2.1",
+    "google-maps-react": "^1.1.0",
     "history": "^4.6.1",
+    "material-ui": "^0.19.2",
+    "npm": "^5.4.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-addons-test-utils": "^15.6.0",
+    "react-async-script-loader": "^0.3.0",
+    "react-bootstrap": "^0.31.3",
     "react-dom": "^15.6.1",
     "react-google-maps": "^8.2.0",
+    "react-icons": "^2.2.5",
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
+    "react-sliding-pane": "^1.2.3",
+    "recompose": "^0.25.0",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.2.3",
