--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-redux": "^5.0.5",
     "react-router-dom": "^4.1.1",
     "react-router-redux": "next",
+    "react-sidebar": "^2.3.2",
     "react-sliding-pane": "^1.2.3",
     "recompose": "^0.25.0",
     "redux": "^3.6.0",
