--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-addons-test-utils": "^15.6.0",
     "react-async-script-loader": "^0.3.0",
     "react-bootstrap": "^0.31.3",
+    "react-dimensions": "^1.3.0",
     "react-dom": "^15.6.1",
     "react-google-maps": "^8.2.0",
     "react-icons": "^2.2.5",
