--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "google-maps": "^3.2.1",
     "google-maps-react": "^1.1.0",
     "history": "^4.6.1",
+    "lodash": "^4.17.4",
     "material-ui": "^0.19.2",
+    "moment": "^2.18.1",
     "npm": "^5.4.2",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
